week2 practice done

--- a/Week2/index.html
+++ b/Week2/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
   </head>
   <body>
     <h1>Interactive Media</h1>
+    <img src="cover.png" alt="This is a cover image">
     <h2>Instructor: Dr.Rohit Ashok Khot</h2>
+    <a href="about.html">Go to about</a>
     <h3>Email: rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</h3>
+    <button><a href="https://mytimetable.rmit.edu.au/odd/student?ss=2c67733e0f774e15985995f078d5d0a3">Go to timetable</a></button>
+    <button>Enrollment</button>
+    <button>Syllabus</button>
     <ul>
       <li>Group 1: Every Tuesday (09:30 am - 12:30 pm)</li>
       <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
@@ -25,5 +34,7 @@
       concepts of interaction design, in service of your broader digital design
       goals.
     </p>
+    <button>Got it!</button>
+    <!--this is a comment>
   </body>
 </html>
