--- a/A1/index.html
+++ b/A1/index.html
@@ -29,7 +29,7 @@
   </ul>
 
   <div class="flip-container-wrapper">
-    <!-- 生成 13 个翻转模块，每个模块的背景图片不同 -->
+    <!-- generate 13 flip modules -->
     <div
       class="flip-container"
       style=" --back-img: url('image1.png')"
