--- a/A1/index.html
+++ b/A1/index.html
@@ -13,7 +13,7 @@
     <style>
       body {
         height: 100vh;
-        background-color: #F3C3B2;
+        background-color: #ffd6c7;
       }
     </style>
   </head>
@@ -29,7 +29,7 @@
   </ul>
 
   <div class="flip-container-wrapper">
-    <!-- generate 13 flip modules -->
+    <!-- generate 13 flip modules, it also shows the details of Luni's interface -->
     <div
       class="flip-container"
       style=" --back-img: url('image1.png')"
