--- a/A1/index.html
+++ b/A1/index.html
@@ -292,5 +292,12 @@ style="--back-img: url('image13.png')"
   </div>
 </div>
 </div> 
+
+<footer>
+  <h3>Youhan Xiong</h3>
+  <p>Bachelor of Design in Digital Media at RMIT</p>
+  <p>Email:<a href="mailto: s3987940@student.rmit.edu.au"></a>s3987940@student.rmit.edu.au</p>
+
+</footer>
   
 </html>
