--- a/A1/index.html
+++ b/A1/index.html
@@ -13,7 +13,7 @@
     <style>
       body {
         height: 100vh;
-        background-color: #ffd6c7;
+        background-color: #b4c0e382;
       }
     </style>
   </head>
