--- a/A1/index.html
+++ b/A1/index.html
@@ -13,7 +13,7 @@
     <style>
       body {
         height: 100vh;
-        background-color: #b4c0e382;
+        background-color: #b4c0e382;/* Choose the same color as the luni web page */
       }
     </style>
   </head>
@@ -23,16 +23,17 @@
   </body>
 
   <ul>
+    <!-- Clear navigation bar, guiding to different interfaces -->
     <button><a href="index.html">Home</a></button>
     <button><a href="https://www.luni.app/">Luni</a></button>
     <button><a href="about.html">Reference</a></button>
   </ul>
 
   <div class="flip-container-wrapper">
-    <!-- generate 13 flip modules, it also shows the details of Luni's interface -->
+    <!-- generate 13 flip modules, it also shows the details of Luni's interface as cards. Can show Luni interface more clearly-->
     <div
       class="flip-container"
-      style=" --back-img: url('image1.png')"
+      style=" --back-img: url('image1.png')" 
     >
       <div class="flipper">
         <div class="front">
