--- a/A1/index.html
+++ b/A1/index.html
@@ -30,7 +30,7 @@
   </ul>
 
   <div class="flip-container-wrapper">
-    <!-- generate 13 flip modules, it also shows the details of Luni's interface as cards. Can show Luni interface more clearly-->
+    <!-- generate 13 flip modules, it also shows the details of Luni's interface as cards. Can show Luni interface more clearly. Learn from Mozilla、ChatGPT、grid-container-->
     <div
       class="flip-container"
       style=" --back-img: url('image1.png')" 
