--- a/A1/about.html
+++ b/A1/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reference list</title>
+    <title>Bibliography list</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,12 +28,11 @@
   </head>
 
   <body>
-    <h1>Reference List</h1>
+    <h1>Bibliography List</h1>
     <div id="grid-container">
       <div id="box1">
         <p>
-          Studio Freight (2025) Luni, Luni.app, https://www.luni.app, accessed
-          29 March 2025.
+            Khara A (2018) CSS Flip Card Effect, www.youtube.com, https://www.youtube.com/watch?v=OV8MVmtgmoY, accessed 21 April 2024.
         </p>
       </div>
       <div id="box2">
@@ -45,15 +44,21 @@
       </div>
       <div id="box3">
         <p>
-          Mozilla (2024) developer - Mozilla | MDN, MDN Web Docs,
-          https://developer.mozilla.org/zh-CN/docs/Mozilla/Add-ons/WebExtensions/manifest.json/developer,
-          accessed 29 March 2025.
+            Color Hunt (2025) Color Hunt - Color Palettes for Designers and
+            Artists, colorhunt.co, https://colorhunt.co/.
         </p>
       </div>
       <div id="box4">
         <p>
-          Color Hunt (2025) Color Hunt - Color Palettes for Designers and
-          Artists, colorhunt.co, https://colorhunt.co/.
+            Mozilla (2024) developer - Mozilla | MDN, MDN Web Docs,
+            https://developer.mozilla.org/zh-CN/docs/Mozilla/Add-ons/WebExtensions/manifest.json/developer,
+            accessed 29 March 2025.
+        </p>
+      </div>
+      <div id="box5">
+        <p>
+            Studio Freight (2025) Luni, Luni.app, https://www.luni.app, accessed
+            29 March 2025.
         </p>
       </div>
     </div>
