--- a/A1/index.html
+++ b/A1/index.html
@@ -26,7 +26,7 @@
     <!-- Clear navigation bar, guiding to different interfaces -->
     <button><a href="index.html">Home</a></button>
     <button><a href="https://www.luni.app/">Luni</a></button>
-    <button><a href="about.html">Reference</a></button>
+    <button><a href="about.html">Bibliography</a></button>
   </ul>
 
   <div class="flip-container-wrapper">
