--- a/A2/clock.html
+++ b/A2/clock.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A2</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="script.js" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap"
+      rel="stylesheet"
+    />
     <script src="script.js"></script>
+    <title>Clock</title>
   </head>
-
   <body>
-
     <header class="top">
       <nav>
         <ul>
@@ -21,13 +22,13 @@
           <li><a href="clock.html">Clock</a></li>
           <li><a href="Music.html">Music</a></li>
           <li><a href="Video.html">Video</a></li>
-        </ul>
       </nav>
     </header>
 
-    <h1>Study With Me</h1>
-
+    <div class="main-clock-area">
+      <div class="clock-container">
+        <div class="flip-clock" id="flipClock">Happy learning</div>
+      </div>
+    </div>
   </body>
-
-
 </html>
