--- a/A2/beats.html
+++ b/A2/beats.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://pixabay.com/sound-effects/search/music%20background/">
     <script src="script.js"></script>
     <title>Music</title>
   </head>
@@ -31,15 +32,18 @@
         <h1 class="music-title">🎵 Light Beats </h1>
         <div class="music-grid">
           <div class="music-card">
-            <h2>Lo-fi Chill</h2>
+            <h2>Electronica</h2>
+            <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="Https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/erokia_ambient-wave-56-msfxp7-78.mp3" type="audio/mp3">
+                <!-- https://pixabay.com/sound-effects/116-bpm-oldschool-electronica-18063/ -->
+              <source src="electronica.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
       
           <div class="music-card">
-            <h2>Rain Sounds</h2>
+            <h2>Minimal Techno</h2>
+            <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
               <source src="assets/rain.mp3" type="audio/mp3">
               Your browser does not support the audio element.
@@ -47,7 +51,8 @@
           </div>
       
           <div class="music-card">
-            <h2>Soft Piano</h2>
+            <h2>Future Garage</h2>
+            <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
               <source src="assets/piano.mp3" type="audio/mp3">
               Your browser does not support the audio element.
