--- a/A2/beats.html
+++ b/A2/beats.html
@@ -36,7 +36,7 @@
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
                 <!-- https://pixabay.com/sound-effects/116-bpm-oldschool-electronica-18063/ -->
-              <source src="electronica.mp3" type="audio/mp3">
+              <source src="sound/electronica.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -45,7 +45,7 @@
             <h2>Minimal Techno</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/rain.mp3" type="audio/mp3">
+              <source src="sound/minimal-techno-random-basic-1-18079.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -54,7 +54,7 @@
             <h2>Future Garage</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/piano.mp3" type="audio/mp3">
+              <source src="sound/big-bell-330719.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
