--- a/A2/noise.html
+++ b/A2/noise.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://pixabay.com/sound-effects/search/music%20background/">
     <script src="script.js"></script>
     <title>Music</title>
   </head>
@@ -37,7 +38,7 @@
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             
             <audio controls loop>
-              <source src="notify.mp3" type="audio/mp3">
+              <source src="sound/notify.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
