--- a/A2/calm.html
+++ b/A2/calm.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://pixabay.com/sound-effects/search/music%20background/">
     <script src="script.js"></script>
     <title>Music</title>
   </head>
@@ -34,7 +35,7 @@
             <h2>Classical Music</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="Https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/erokia_ambient-wave-56-msfxp7-78.mp3" type="audio/mp3">
+              <source src="sound/a-tranquil-music-box-165984.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -43,7 +44,7 @@
             <h2>Piano Only</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/rain.mp3" type="audio/mp3">
+              <source src="sound/nostalgia-a-sweet-amp-memorable-loopable-piano-song-by-gtg-319605.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -52,7 +53,7 @@
             <h2>Acoustic Guitar</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/piano.mp3" type="audio/mp3">
+              <source src="sound/acoustic-guitar-short-intro-ish-live-recording-163329.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
