--- a/A2/focus.html
+++ b/A2/focus.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://pixabay.com/sound-effects/search/music%20background/">
     <script src="script.js"></script>
     <title>Music</title>
   </head>
