--- a/A2/focus.html
+++ b/A2/focus.html
@@ -35,7 +35,7 @@
             <h2>Lo-fi Chill</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="Https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/erokia_ambient-wave-56-msfxp7-78.mp3" type="audio/mp3">
+              <source src="sound/lofi-alarm-clock-243766.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -44,7 +44,7 @@
             <h2>Alpha Waves</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/rain.mp3" type="audio/mp3">
+              <source src="sound/022413_maria39s-dream-alpha-darkwalkerwav-78618.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -53,7 +53,7 @@
             <h2>Jazzhop</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/piano.mp3" type="audio/mp3">
+              <source src="sound/jazz-loop-7163.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
