--- a/A2/meditative.html
+++ b/A2/meditative.html
@@ -44,7 +44,7 @@
             <h2>Tibetan Singing Bowls</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/rain.mp3" type="audio/mp3">
+              <source src="sound/tibetan-bowl-26240.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -53,7 +53,7 @@
             <h2>Zen Music</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/piano.mp3" type="audio/mp3">
+              <source src="sound/beautiful-zen-sounds-211714.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
