--- a/A2/noise.html
+++ b/A2/noise.html
@@ -56,7 +56,7 @@
             <h2>Library Ambience</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/piano.mp3" type="audio/mp3">
+              <source src="sound/rain-sounds-210646.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -65,7 +65,7 @@
             <h2>Forest Ambience</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/piano.mp3" type="audio/mp3">
+              <source src="sound/forest-nature-322637.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -74,7 +74,7 @@
             <h2>Cafe Ambience</h2>
             <a href="Video.html"><img src="icon1.png" alt="go"></a>
             <audio controls loop>
-              <source src="assets/piano.mp3" type="audio/mp3">
+              <source src="sound/cafe-ambience-9263.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -82,12 +82,8 @@
         </div>
       </div>
       <button><a href="Music.html">Back</a></button>
-      <iframe id="content-frame" src="noise.html"></iframe>
 
-      <script>
-        function goTo(page) {
-          document.getElementById("content-frame").src = page;
-        }
-      </script>
+
+    
 </body>
 </html>
