--- a/A2/meditative.html
+++ b/A2/meditative.html
@@ -60,5 +60,16 @@
         </div>
     </div>
       <button><a href="Music.html">Back</a></button>
+
+      <div id="videoSection">
+        <div class="video-container">
+          <video id="studyVideo" autoplay loop muted >
+            <source src="video1.mp4" type="video/mp4" />
+            <!-- https://pixabay.com/videos/energy-field-tunnel-energy-study-74933// -->
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+
 </body>
 </html>
