--- a/A2/beats.html
+++ b/A2/beats.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://pixabay.com/sound-effects/search/music%20background/">
+    <link rel="preconnect" href="https://pixabay.com/">
     <title>Music</title>
   </head>
   <body>
