--- a/A2/noise.html
+++ b/A2/noise.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://pixabay.com/sound-effects/search/music%20background/">
+    <link rel="preconnect" href="https://pixabay.com/">
     
     <title>Music</title>
   </head>
@@ -86,7 +86,7 @@
       <div id="videoSection">
         <div class="video-container">
           <video id="studyVideo" autoplay loop muted >
-            <source src="video1.mp4" type="video/mp4" />
+            <source src="video3.mp4" type="video/mp4" />
             <!-- https://pixabay.com/videos/energy-field-tunnel-energy-study-74933/ -->
             Your browser does not support the video tag.
           </video>
