--- a/A2/Video.html
+++ b/A2/Video.html
@@ -24,7 +24,7 @@
 
     <div class="video-container">
         <h1 class="video-title">Fragments of Learning 📚✨</h1>
-        <video id="studyVideo" autoplay loop src="video3.mp4">
+        <video id="studyVideo" autoplay loop src="https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/miac.mp4">
             <!-- https://pixabay.com/videos/girl-study-relax-anime-143782/ -->
           Your browser does not support the video tag
         </video>
