--- a/A2/Music.html
+++ b/A2/Music.html
@@ -15,7 +15,7 @@
     <title>Music</title>
   </head>
   <body>
-    <!-- 导航栏 -->
+    <!-- Navigation Bar -->
 
     <header class="top">
       <nav>
@@ -27,8 +27,10 @@
         </ul>
       </nav>
     </header>
-    <!-- 泡泡子导航栏 -->
-
+    <!-- Bubble sub-navigation bar -->
+     <!-- Allows users to intuitively find the type of audio they want to listen to while studying. 
+          All are suitable for listening while studying.
+          Click on the bubble to jump to a separate category interface, Each page corresponds to a sound theme. -->
      <div class="music-bubble-container">
         <a href="focus.html" class="music-bubble">Focus</a>
         <a href="calm.html" class="music-bubble">Calm</a>
