--- a/A2/clock.html
+++ b/A2/clock.html
@@ -23,11 +23,16 @@
           <li><a href="Video.html">Video</a></li>
       </nav>
     </header>
-
+    <!-- Make learning more efficient and race against time -->
     <div class="main-clock-area">
       <div class="clock-container">
+        <!-- The clock body will be dynamically controlled by JavaScript to display content -->
         <div class="flip-clock" id="flipClock">Happy learning</div>
       </div>
     </div>
+    <!-- Selections for future function expansion:
+    Can integrate JS flip-clock plug-in to realize flipping digital animation
+    Support different status display (focusing, resting, completed, etc.)
+    add a timer later. Display the focus countdown, time setting, start and pause buttons -->
   </body>
 </html>
