--- a/A2/beats.html
+++ b/A2/beats.html
@@ -14,7 +14,7 @@
     <title>Music</title>
   </head>
   <body>
-    <!-- 导航栏 -->
+    <!-- Navigation Bar -->
 
     <header class="top">
       <nav>
@@ -27,8 +27,12 @@
       </nav>
     </header>
 <body>
+    <!-- Users can choose their favorite music to play, and the audio will be played in a loop. 
+         User can also click the video icon above to jump to the interface and play different learning videos (combined with the selected audio). 
+         The audio can adjust the volume, adjust the playback progress, and play and pause. -->
     <div class="music-page">
         <h1 class="music-title">🎵 Light Beats </h1>
+
         <div class="music-grid">
           <div class="music-card">
             <h2>Electronica</h2>
@@ -59,6 +63,8 @@
           </div>
         </div>
       </div>
+     
+      <!-- There is a button at the bottom to return to the Music interface and select other audio to play. -->
       <button><a href="Music.html">Back</a></button>
 
       <div id="videoSection">
