--- a/A2/index.html
+++ b/A2/index.html
@@ -11,11 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Moirai+One&family=Rubik+Distressed&display=swap" rel="stylesheet">
     <script src="script.js"></script>
   </head>
-
+  <!-- Music for relaxation/study -->
   <body>
-
+    <!-- I would like to create a “study with me” website with clocks, music and videos of studying together. 
+     Glass mimicry (translucent + background blur),Like concentrating on reading in a quiet virtual space. Music is the main focus. -->
+    <!-- Introduction + Navigation Portal (into Study Mode) -->
     <header class="top">
       <nav>
+        <!-- Clear navigation bar -->
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="clock.html">Clock</a></li>
@@ -28,6 +31,6 @@
     <h1>Study With Me</h1>
 
   </body>
-
+  <!-- can add a "Learning Records" page or a "User Settings" page... later. -->
 
 </html>
