--- a/A2/Video.html
+++ b/A2/Video.html
@@ -26,7 +26,7 @@
 
     <div class="video-container">
       <!-- Video interface, learning partner, more focused -->
-      <h1 class="video-title">Fragments of Learning 📚✨</h1>
+      <h1 class="video-title">Fragments of Learning</h1>
       <video
         id="studyVideo"
         autoplay
