--- a/A2/beats.html
+++ b/A2/beats.html
@@ -31,7 +31,7 @@
          User can also click the video icon above to jump to the interface and play different learning videos (combined with the selected audio). 
          The audio can adjust the volume, adjust the playback progress, and play and pause. -->
     <div class="music-page">
-        <h1 class="music-title">🎵 Light Beats </h1>
+        <h1 class="music-title">Light Beats </h1>
 
         <div class="music-grid">
           <div class="music-card">
