--- a/try/index.html
+++ b/try/index.html
@@ -1,299 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A1 web</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Bytesized&display=swap"
-    />
-    <style>
-      body {
-        height: 100vh;
-        background-color: rgb(138, 178, 166);
-      }
-    </style>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <title>Reality: Echoes Carved in Silence</title>
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-  <body>
-    <h1>A1: My Universe with Luni</h1>
-  </body>
+<nav>
+  <a href="#intro" class="nav-link active">Introduction</a>
+  <a href="#timeline" class="nav-link">Timeline</a>
+  <a href="#gallery" class="nav-link">Gallery</a>
+  <a href="#video" class="nav-link">Video</a>
+</nav>
 
-  <ul>
-    <li><a href="#"></a>Home</li>
-    <li><a href="#"></a>About</li>
-    <li><a href="https://www.luni.app/">Luni</a></li>
-    <li><a href="#"></a>Contact</li>
-  </ul>
+<main>
 
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (1) What was the first thing you paid attention to when interacting
-          with the experience?
-        </p>
-      </div>
+  <section id="intro" class="intro">
+    <h1>Reality: Echoes Carved in Silence</h1>
+    <p>A stream-of-consciousness journey into the sacred, the broken, and the eternal.</p>
+  </section>
 
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
+  <section id="timeline" class="timeline">
+    <!-- timeline items交替左右 -->
+    <section class="timeline-item left" data-color="#111">
+      <div class="text-side">
+        <h2>Scene 1</h2>
+        <h3>The Weight in Disguise</h3>
+        <p>They said reality was cast in iron, yet all I could ever touch - was mist.
+          They handed me an iron mask, calling it a gift for growing up.
+          I practiced the arc of my smile, again and again, until calluses bloomed on my cheeks, fitting the mask perfectly.
+          Look
+          the cracks had begun back then.
+          Pain, the very first miracle.
+          When my blood seeped into the cracks, nothingness finally gained its weight.</p>
       </div>
-    </div>
-  </div>
+      <div class="image-side">
+        <img src="img1.png" alt="Scene 1" />
+      </div>
+    </section>
 
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (2)Spend two minutes with the experience and create a list of each of
-          your discrete actions.
-        </p>
+    <section class="timeline-item right" data-color="#222">
+      <div class="text-side">
+        <h2>Scene 2</h2>
+        <h3>The Elephant’s Revelation</h3>
+        <p>In those years, deep into the night, I often heard heavy footsteps approaching from afar.
+Until one day, I realized -
+it was only my own heartbeat,
+hauling the weight of the entire world
+inside my hollow chest.
+How laughable -
+that we tear each other apart, all for the applause that never truly existed.
+How absurd -
+that we dance with shackles on our feet, and call it
+measuring the boundaries of freedom.
+So why not
+Escape completely, from our rotting shells,
+from the insoluble riddles of life?</p>
       </div>
-      <div class="back">
-        <p>
-          (1)Move your mouse on the homepage to switch perspectives and explore
-          different models and animations. (2) Scroll down to explore the
-          subsections below the homepage section. Home, Studio, Omada, Career,
-          luni life Click on different parts of different models to interact.
-          (3)Click the navigation menu to see if there are other spaces and
-          pages to explore. (4)Click the "Discover" section of each sub-screen
-          to jump to the details screen to learn more about Luni. And luni's
-          recruitment information (5)Click on the social media icons (such as
-          Twitter or Discord) to explore external links. (6)Click the button to
-          switch between different screens. Scroll back to the top and view the
-          homepage section again.
-        </p>
+      <div class="image-side">
+        <img src="img2.png" alt="Scene 2" />
       </div>
-    </div>
-  </div>
+    </section>
 
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (3) What part of the experience did you spend the most time engaging
-          with?
-        </p>
+    <section class="timeline-item left" data-color="#111">
+      <div class="text-side">
+        <h2>Scene 3</h2>
+        <h3>The Testimony of Light</h3>
+        <p>They told me: "Grasp the light, and you shall become light."
+          Yet the light slipped through my fingers, leaving behind a deeper shadow.
+          We are all transparent vessels, holding the fleeting moment, leaking the eternal.
+          Someday, we will understand:
+          Regret is that the moonlight cannot illuminate certain corners.
+          And life - needs such shadows
+          to define the shape of light.</p>
       </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
+      <div class="image-side">
+        <img src="img3.png" alt="Scene 3" />
       </div>
-    </div>
-  </div>
+    </section>
 
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (4) What was the most common action in your two minute interaction
-          with the experience?
-        </p>
+    <section class="timeline-item right" data-color="#222">
+      <div class="text-side">
+        <h2>Scene 4</h2>
+        <h3>Forgetfulness and Return</h3>
+        <p>Now I understand:
+          the elephant never truly left.
+          We simply grew used to lowering our heads.
+          Better then
+          to love the gaps where the wind slips through.
+          For it is through those cracks that the eternal wind passes through our transient bodies.</p>
       </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
+      <div class="image-side">
+        <img src="img4.png" alt="Scene 4" />
       </div>
-    </div>
-  </div>
+    </section>
+  </section>
 
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (5) What is your impression of the intended primary goal of the
-          interactive experience?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
+  <section class="scroll-gallery section" data-color="#1a1a1a" id="gallery">
+     <h2 class="section-title">Gallery</h2>
+     <div class="gallery-track">
+         <img src="img5.png" alt="Scene 5" />
+         <img src="img6.png" alt="Scene 6" />
+         <img src="img7.png" alt="Scene 7" />
+         <img src="img8.png" alt="Scene 8" />
+     </div>
+   </section>  
+  
 
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (6) How does the interactive experience communicate this primary goal?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
+  <section id="video" class="video-section" data-color="#000">
+    <h2>Video</h2>
+    <iframe
+      id="film"
+      src="https://vimeo.com/1084951613?share=copy"
+      allowfullscreen
+      frameborder="0"
+    ></iframe>
+  </section>
+</main>
 
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (7) What is your impression of how the experience should be interacted
-          with over time? (For how long and how many different times)
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (8) How does the interactive experience communicate how it should be
-          interacted with over time?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (9)What other media forms (digital or otherwise) does the experience
-          reference?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (10) What does this reference/s communicate to you about how you
-          should act when engaging with your research experience?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (11) What does this reference/s communicate to you about how you
-          should feel when engaging with your research experience?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (12)What is the most frustrating part of the interaction to you and
-          what makes that part frustrating?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="flip-container">
-    <div class="flipper">
-      <div class="front">
-        <p>
-          (13) What is the most satisfying part of the interaction to you and
-          what makes that part satisfying?
-        </p>
-      </div>
-      <div class="back">
-        <p>
-          The first thing I noticed was the background text on the page, which
-          is the visual center focus. The color adopts the design principle of
-          "Contrast", and the oversized title "Luniverse" with white gradient
-          attracts my attention with an excellent visual hierarchy. "Welcome to
-          Luni's universe" conveys the core value and content of the website.
-        </p>
-      </div>
-    </div>
-  </div>
+<script src="script.js"></script>
+</body>
 </html>
+
