--- a/try/index.html
+++ b/try/index.html
@@ -109,15 +109,18 @@ from the insoluble riddles of life?</p>
    </section>  
   
 
-  <section id="video" class="video-section" data-color="#000">
+   <section id="video" class="video-section" data-color="#000">
     <h2>Video</h2>
     <iframe
       id="film"
-      src="https://vimeo.com/1084951613?share=copy"
-      allowfullscreen
+      src="https://player.vimeo.com/video/1084951613"
+      width="100%" height="480"
       frameborder="0"
+      allow="autoplay; fullscreen; picture-in-picture"
+      allowfullscreen
     ></iframe>
   </section>
+  
 </main>
 
 <script src="script.js"></script>
