--- a/A3/index.html
+++ b/A3/index.html
@@ -16,11 +16,48 @@
 
     <main>
       <section id="intro" class="intro">
-        <h1>Reality: Echoes Carved in Silence</h1>
+        <h1 class="title">
+          <span
+            class="hover-word"
+            data-type="text"
+            data-content="Reality: Echoes Carved in Silence is a 3-5 minute AI-generated stream-of-consciousness emotional short film that utilizes poetic language and dream-like images to create a stream-of-consciousness space about reality, nothingness, and existentialism. The short film will generate text, images, videos, and sounds through AI, and will eventually be edited into a complete work in Adobe Premiere Pro, aiming to provide an immersive experience for philosophy, art, and literature enthusiasts."
+            >Reality</span
+          >:
+          <span class="hover-word" data-type="image" data-content="img14.png">
+            Echoes
+          </span>
+
+          <span
+            class="hover-word"
+            data-type="text"
+            data-content="Text → ChatGPT + Deepseek (optimized structure and style)
+             Image → Jimeng + Midjourney (prompt control generation)
+             Video → Kling + Hailuo (image to dynamic + lens transition design)
+             Dubbing → ElevenLabs (young female voice, melancholy)
+             Music → Suno (Dreamy Soul style)
+             Post-production → Adobe Premiere Pro (editing, color grading, non-linear structure construction)"
+            >Carved</span
+          >
+          <span class="hover-word" data-type="image" data-content="img15.png"
+            >in</span
+          >
+          <span
+            class="hover-word"
+            data-type="text"
+            data-bg="#222831"
+            id="silence-word"
+            data-content="Welcome to my world "
+            >SILENCE</span
+          >
+        </h1>
+
         <p>
           A stream-of-consciousness journey into the sacred, the broken, and the
           eternal.
         </p>
+
+        <!-- Tooltip container -->
+        <div id="hover-display"></div>
       </section>
 
       <section id="timeline" class="timeline">
@@ -112,7 +149,6 @@
             <img src="img9.JPG" alt="Scene 5" />
           </div>
         </section>
-        
       </section>
 
       <section class="scroll-gallery section" data-color="#1a1a1a" id="gallery">
